# pyvisco

./: .gitignore  .readthedocs.yml  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LinViscoFit-test.ipynb  LinViscoFit.ipynb  README.md  pyproject.toml  theory.html  theory.md  voila.json
.github/workflows/: binder.yml  ci.yml  draft-pdf.yml  notebooks.yml  rebuild-hf-space.yml  release-assets.yml
binder/: Dockerfile  environment.yml  jupyter_config.json
docs/: api.rst  conf.py  index.rst  theory.rst
docs/_autosummary/: pyvisco.inter.rst  pyvisco.load.rst  pyvisco.master.rst  pyvisco.opt.rst  pyvisco.out.rst  pyvisco.prony.rst  pyvisco.shift.rst  pyvisco.styles.rst  pyvisco.verify.rst
docs/changelog/: index.rst  v1.0.5.rst  v2.0.0.rst  v2.0.1.rst  v2.0.2.rst  v2.1.0.rst  v2.1.1.rst  v2.1.2.rst  v2.1.3.rst
paper/: paper.bib  paper.md
pyvisco/: __init__.py  inter.py  load.py  master.py  opt.py  out.py  prony.py  shift.py  styles.py  verify.py
sample_data/: README.md
tests/: conftest.py  test_inter.py  test_load.py  test_master.py  test_opt.py  test_out.py  test_prony.py  test_shift.py  test_verify.py
tests/data/: E1_Poly.USER_MPL  E1_WLF.USER_MPL  README.md
tutorials/: README.md  freq_master.py  freq_raw.py  time_master.py  tutorial.ipynb
verification/: README.md  nbval_sanitize.cfg  verify_freq_master.ipynb  verify_freq_raw.ipynb  verify_time_master.ipynb
