[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvisco"
dynamic = ["version"]
description = "Prony series identification for linear viscoelastic material models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Martin Springer", email = "martin.springer@nlr.gov" }]
maintainers = [{ name = "Martin Springer", email = "martin.springer@nlr.gov" }]
keywords = ["curve-fitting", "material-modelling", "viscoelasticity", "prony"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "ipython>=8.20",
    "markdown>=3.5",
    "jinja2>=3.1",
    # Interactive notebook UI
    "ipywidgets>=8.1",
    "ipympl>=0.9.3",
    "notebook>=7.1",
    "jupyterlab>=4.1",
    # Web app (Voila)
    "voila>=0.5",
    # Excel input support
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "nbval>=0.11",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=3.0",
    "sphinx-rtd-theme>=2.0",
]
dev = [
    "pyvisco[test,docs]",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "build>=1.2",
]

[project.urls]
Documentation = "https://pyvisco.readthedocs.io/"
"Source Code" = "https://github.com/NatLabRockies/pyvisco/"

[tool.setuptools.packages.find]
include = ["pyvisco*"]
exclude = ["tests*", "build*", "docs*", "verification*"]

[tool.setuptools_scm]
# Fallback when not installed from a git checkout with tags
fallback_version = "1.0.5"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
"pyvisco/inter.py" = ["E402"]
